--- a/css/styles.css
+++ b/css/styles.css
@@ -178,8 +178,7 @@ footer a {
   figure {
   margin: 3rem 0 0 0 ;
   flex-basis: 35%;
-
-}
+  padding-top: 4rem; }
 }
 figure img {
   display: flex;
