--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,7 @@ nav a:hover {
 }
 /* establishes a white background */
 .main-bkgd {
-  background: #ffffff url(https://assets.codepen.io/6306176/gulp-bean-bkgd.jpg) repeat-x bottom;
+  background: #ffffff url(../media/gulp-bottom-beans.jpg) repeat-x bottom;
   padding-bottom: 300px;
 }
 /* sits inside of the white background, centered */
@@ -68,6 +68,7 @@ nav a:hover {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
+  padding-bottom: 20rem;
 
 }
 article {
@@ -112,7 +113,6 @@ figure img {
 footer {
   color: #f2f2f2;
   text-align: center;
-  border-top: 10px solid #d98555;
 }
 footer ul {
   list-style-type: none;
@@ -163,6 +163,10 @@ footer a {
   .tablet {
     display: none;
   }
+  .productsfooter {
+    color: #f2f2f2;
+    text-align: center;
+    border-top: none;}
 }
 @media (min-width: 420px) and (max-width: 768px) {
   .tablet {
@@ -203,4 +207,149 @@ figure {
   flex-basis: 45%;
  
   padding-top: 4rem; }
+
+  nav ul {
+     padding: 0;
+     margin: 0;
+     display: flex;
+     flex-flow: row;
+     justify-content: center;
+     align-items: center;
+  }
+  nav .logo img {
+    max-width: 150px;
+  }
+  nav .logo {
+    flex-basis: 100%;
+    text-align: center;
+    }
+  nav a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-right: 1rem;
+  }
+  nav li {
+    align-items: center;
+  }
+  i {
+    padding: 0.5rem; }
+  }
+
+/*for products page*/
+
+.main-bkgd {
+  padding: 1rem;
 }
+.items {
+  background: transparent;
+  padding-bottom: 300px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  box-sizing: border-box;
+  width: 100%;
+  
+}
+section{
+  background: transparent;
+}
+
+article img{
+  border-radius: 10px;
+}
+
+.card1 {
+  padding-right: 1rem;
+  padding-left: 1rem;
+
+}
+.card2 {
+  padding-right: 1rem;
+
+}
+.card3 {
+  padding-right: 1rem;
+
+}
+
+@media (max-width: 420px) {
+  nav ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  }
+  nav li {
+  margin: 0 1rem 2rem 1rem;
+    font-size: 1.3rem; }
+  
+  nav .logo img {
+  max-width: 180px;
+}
+  .main {
+  display: flex;
+  flex-direction: column; }
+  
+  figure {
+  margin: 3rem 0 0 0;
+  flex-basis: 25%;
+  background-color: white;
+  }
+  .items {
+    background: transparent;
+    padding-bottom: 300px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    box-sizing: border-box;
+    width: 100%;
+}
+}
+
+/*for contact us page*/
+@media (min-width: 769px) {
+article {
+  box-sizing: border-box;
+  margin-top: 10rem;
+}
+}
+
+@media (min-width: 420px) and (max-width: 768px) {
+  article {
+    box-sizing: border-box;
+    margin-top: 5rem;
+    padding-right: 1rem;
+    flex-basis: 50%;  }
+
+  figure {
+  margin: 3rem 0 0 0 ;
+  flex-basis: 50%;
+  padding-top: 4rem;
+ }
+
+  figure img {
+  display: flex;
+  align-items: center;
+}
+}
+
+@media (max-width: 480px) {
+    nav ul {
+      padding: 0;
+      margin: 0;
+      list-style-type: none;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      }
+      nav li {
+      margin: 0 1rem 2rem 1rem;
+        font-size: 1.3rem; }
+      
+      nav .logo img {
+      max-width: 180px;
+    }
+  }
